<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutBackground"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />
    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/SignUpTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxStrokeColor="@android:color/white"
        app:boxStrokeWidth="3dp"
        app:hintEnabled="true"
        android:hint="@string/email_hint"
        app:hintTextColor="@android:color/white"
        tools:layout_editor_absoluteY="320dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="37dp"
            tools:layout_editor_absoluteY="248dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SignUpTextInputLayout2"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginStart="30dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="30dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/SignUpTextInputLayout"
    app:boxCornerRadiusTopEnd="15dp"
    app:boxCornerRadiusTopStart="15dp"
    app:boxCornerRadiusBottomEnd="15dp"
    app:boxCornerRadiusBottomStart="15dp"
    app:boxStrokeColor="@android:color/white"
    app:boxStrokeWidth="3dp"
    app:hintEnabled="true"
    android:hint="@string/password_hint"
    app:hintTextColor="@android:color/white"
    tools:layout_editor_absoluteY="320dp">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="248dp" />

</com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/SignUpTextInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SignUpTextInputLayout2"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxStrokeColor="@android:color/white"
        app:boxStrokeWidth="3dp"
        app:hintEnabled="true"
        android:hint="@string/password_hint"
        app:hintTextColor="@android:color/white"
        tools:layout_editor_absoluteY="320dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="37dp"
            tools:layout_editor_absoluteY="248dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:backgroundTint="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"
        android:textColor="@color/layoutBackground"
        android:onClick="signUp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/SignUpTextInputLayout3"
        app:layout_constraintStart_toStartOf="@+id/SignUpTextInputLayout3"
        app:layout_constraintTop_toBottomOf="@+id/SignUpTextInputLayout3" />
</androidx.constraintlayout.widget.ConstraintLayout>